import { createConnection } from 'typeorm';
import {
  buildWhereQuery,
  purifyFilter,
} from './filter';
import { StorageTypePostgres } from './StorageTypePostgres';
import { loadModels } from './generator';
import { Server } from '../test/models/Server';

import {
  Schema,
} from 'shift-engine';


let connection

beforeAll(async () => {

  const schema = new Schema({

    defaultStorageType: StorageTypePostgres,

    entities: [
      Server,
    ],
  })


  const modelRegistry = loadModels(schema)

  const entitySchemas = Object.keys(modelRegistry).map(entityName => {
    return modelRegistry[entityName].model
  })


  connection = await createConnection({
    database: ':memory:',
    type: 'sqlite',
    entitySchemas,
  });
})



describe('filter', () => {

  describe('purifyFilter', () => {

    it('should clean empty filter bocks', () => {
      const filter = {
        $and: [
          {
            username: {
              $contains: 'bot',
              $startsWith: '_system_%'
            },
            language: {
              $in: [],
              $lt: 5,
              $gte: 1,
            },
            $or: [
              {
                'LookupEntity.role': 1
              },
              {
              },
              {
                accessLevel: 1
              }
            ]
          },
          {
            $and: [
              {},
              {}
            ]
          },
          {
            $or: [
              {},
              {
                $and: [
                  {
                    username: 'hallo'
                  }
                ]
              }
            ]
          }
        ],
        $or: [
          {
            lastname: 'smith',
            firtname: {}
          },
          {
          }
        ]
      }

      const pureFilter = purifyFilter(filter)
      expect(pureFilter).toMatchSnapshot()
    })
  })


  describe('buildWhereQuery', () => {

    const entityNameServer = 'Server'

    it('empty filter', () => {
      const qBuilder = connection.createQueryBuilder(entityNameServer, entityNameServer)
      const filter = null
      const pureFilter = purifyFilter(filter)

      buildWhereQuery(qBuilder, pureFilter, entityNameServer)
      const query = qBuilder.getQueryAndParameters()
      expect(query).toMatchSnapshot()
    })


    it('simple properties filter', () => {
      const qBuilder = connection.createQueryBuilder(entityNameServer, entityNameServer)
      const filter = {
        ip: '127.0.0.1',
        name: 'test-server-1',
      }
      const pureFilter = purifyFilter(filter)

      buildWhereQuery(qBuilder, pureFilter, entityNameServer)
      const query = qBuilder.getQueryAndParameters()
      expect(query).toMatchSnapshot()
    })


    it('logical AND filter', () => {
      const qBuilder = connection.createQueryBuilder(entityNameServer, entityNameServer)
      const filter = {
        $and: [
          {
            ip: '127.0.0.1',
            name: 'test-server-1',
          },
          {
            clusterZone: 4,
          }
        ]
      }
      const pureFilter = purifyFilter(filter)

      buildWhereQuery(qBuilder, pureFilter, entityNameServer)
      const query = qBuilder.getQueryAndParameters()
      expect(query).toMatchSnapshot()
    })


    it('logical OR filter', () => {
      const qBuilder = connection.createQueryBuilder(entityNameServer, entityNameServer)
      const filter = {
        $or: [
          {
            ip: '127.0.0.1',
            name: 'test-server-1',
          },
          {
            ip: '127.0.0.1',
            name: 'test-server-2',
          }
        ]
      }
      const pureFilter = purifyFilter(filter)

      buildWhereQuery(qBuilder, pureFilter, entityNameServer)
      const query = qBuilder.getQueryAndParameters()
      expect(query).toMatchSnapshot()
    })


    it('combined logical AND/OR filter', () => {
      const qBuilder1 = connection.createQueryBuilder(entityNameServer, entityNameServer)

      const filter1 = {
        $and: [
          {
            ip: '127.0.0.1',
            $or: [
              {
                clusterZone: 1,
              },
              {
              },
              {
                clusterZone: 7,
              }
            ]
          },
          {
            name: 'test-server-1',
          }
        ]
      }
      const pureFilter1 = purifyFilter(filter1)

      buildWhereQuery(qBuilder1, pureFilter1, entityNameServer)
      const query1 = qBuilder1.getQueryAndParameters()
      expect(query1).toMatchSnapshot()


      const qBuilder2 = connection.createQueryBuilder(entityNameServer, entityNameServer)

      const filter2 = {
        $or: [
          {
            ip: '127.0.0.1',
            $and: [
              {
                clusterZone: 1,
              },
              {
              },
              {
                name: 'test-server-110',
              }
            ]
          },
          {
            name: 'test-server-1',
          }
        ]
      }
      const pureFilter2 = purifyFilter(filter2)

      buildWhereQuery(qBuilder2, pureFilter2, entityNameServer)
      const query2 = qBuilder2.getQueryAndParameters()
      expect(query2).toMatchSnapshot()
    })


    it('reject if unknown operators are used', () => {
      const qBuilder = connection.createQueryBuilder(entityNameServer, entityNameServer)

      const filter = {
        $or: [
          {
            name: {
              $unknownOp: 123,
            }
          }
        ]
      }

      const pureFilter = purifyFilter(filter)

      const fn = () => {
        buildWhereQuery(qBuilder, pureFilter, entityNameServer)
      }

      expect(fn).toThrowErrorMatchingSnapshot()
    })


    it('reject if AND is not provided with an array', () => {
      const qBuilder = connection.createQueryBuilder(entityNameServer, entityNameServer)

      const filter = {
        $and: {
          name: {
            $unknownOp: 123,
          }
        }
      }

      const pureFilter = purifyFilter(filter)

      const fn = () => {
        buildWhereQuery(qBuilder, pureFilter, entityNameServer)
      }

      expect(fn).toThrowErrorMatchingSnapshot()
    })


    it('reject if OR is not provided with an array', () => {
      const qBuilder = connection.createQueryBuilder(entityNameServer, entityNameServer)

      const filter = {
        $or: 123
      }

      const pureFilter = purifyFilter(filter)

      const fn = () => {
        buildWhereQuery(qBuilder, pureFilter, entityNameServer)
      }

      expect(fn).toThrowErrorMatchingSnapshot()
    })


    it('reject if operator is used without an attribute', () => {
      const qBuilder = connection.createQueryBuilder(entityNameServer, entityNameServer)

      const filter = {
        $and: [
          {
            $not: 123,
          }
        ]
      }

      const pureFilter = purifyFilter(filter)

      const fn = () => {
        buildWhereQuery(qBuilder, pureFilter, entityNameServer)
      }

      expect(fn).toThrowErrorMatchingSnapshot()
    })


    it('complex and nested filter with various operators', () => {
      const qBuilder = connection.createQueryBuilder(entityNameServer, entityNameServer)

      const filter = {
        $or: [
          {
            ip: {
              $in: [
                '127.0.0.1',
                '192.168.0.1',
              ],
            },
            name: {
              $startsWith: 'test-'
            }
          },
          {
          },
          {
            ip: '10.0.0.1',
          },
          {
            name: {
              $contains: 'open',
              $startsWith: 'demo',
              $endsWith: 'server',
            },
            $or: [
              {
                clusterZone: {
                  $in: [
                    6,
                    7,
                  ],
                },
              },
              {
                clusterZone: {
                  $gt: 10,
                  $lt: 100,
                  $ne: 50,
                  $notIn: [
                    44,
                  ]
                }
              }
            ],
            $and: [
              {
                $or: [
                  {
                    clusterZone: 88
                  },
                  {
                    clusterZone: {
                      $lte: 40,
                      $gte: 30,
                    }
                  },
                ]
              },
              {
                name: {
                  $notContains: 'open',
                  $notStartsWith: 'demo',
                  $notEndsWith: 'server',
                },
              }
            ]
          },
        ],
        $and: [
          {
            name: 'secret-server'
          },
          {
          }
        ]
      }

      const pureFilter = purifyFilter(filter)

      buildWhereQuery(qBuilder, pureFilter, entityNameServer)
      const query = qBuilder.getQueryAndParameters()
      expect(query).toMatchSnapshot()
    })

  })

})
